syntax = "proto3";
package pb;
option go_package = "internal/infra/grpc/pb";

message CreateOrderRequest {
  string id = 1;
  float price = 2;
  float tax = 3;
}

message CreateOrderResponse {
  string id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
}


message ListOrderRequest {
  int32 page = 1;
  int32 limit = 2;
}


message ListOrderResponse {
  repeated CreateOrderResponse orders = 1;
  int32 currentPage = 2;
  int32 totalPages = 3;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc ListOrder(ListOrderRequest) returns (ListOrderResponse);
}